refactor: Usar Stream.toList() en lugar de Collectors.toList()